INREL-4055: fixed overflowing captions

--- a/sass/mixins/_mixins.products.scss
+++ b/sass/mixins/_mixins.products.scss
@@ -82,6 +82,7 @@
 
   .caption {
     position: relative;
+    max-width: 100%;
   }
 
   @media (max-width: $screen-xs-max) {
@@ -220,6 +221,7 @@
 
   .caption {
     position: relative;
+    max-width: 100%;
   }
 
   @media (max-width: $screen-xs-max) {
